# aic

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  MILESTONES.md  README.md  SPEC.md
.claude/: launch.json
dev/: mcp-oauth-stub.py
src/: active_model.rs  agent.rs  main.rs
src/commands/: auth.rs  clear.rs  config.rs  doctor.rs  exit.rs  help.rs  mod.rs  model.rs  session.rs
src/config/: loader.rs  mod.rs  secrets.rs  trust.rs  types.rs  wizard.rs
src/config/secrets/: cli.rs  crypto.rs  keychain.rs  mod.rs  storage.rs
src/llm/: mod.rs  stream.rs  types.rs
src/mcp/: connect.rs  manager.rs  mod.rs  protocol.rs  server.rs  transport.rs
src/mcp/auth/: discovery.rs  flow.rs  loopback.rs  mod.rs
src/repl/: context.rs  dispatch.rs  mod.rs  prompt.rs  view.rs
