[package]
name = "aic"
version = "0.1.0"
edition = "2021"
description = "Minimal interactive chat CLI for OpenAI-compatible endpoints with MCP (Streamable HTTP) tool calling."
repository = "https://github.com/niaeashes/aic"
license = "MIT"
readme = "README.md"
keywords = ["cli", "chat", "llm", "mcp", "openai"]
categories = ["command-line-utilities"]

[[bin]]
name = "aic"
path = "src/main.rs"

# Release binary is stripped and LTO'd. `cargo install --git` picks this up directly.
[profile.release]
strip = true        # Drop debug symbols (~30-50% size reduction)
lto = true          # Link-time optimization (speed + size)
codegen-units = 1   # Slower build, better optimization (acceptable for personal distribution)

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
eventsource-stream = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"

# CLI / REPL
clap = { version = "4", features = ["derive"] }
rustyline = "14"

# Errors
anyhow = "1"

# Command registration
async-trait = "0.1"
inventory = "0.3"

# Secrets
chacha20poly1305 = "0.10"
# keyring 3.x requires explicitly selecting a backend feature. MVP is macOS Keychain only.
keyring = { version = "3", features = ["apple-native"] }
base64 = "0.22"
rand = "0.8"

# Path resolution
directories = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Stream utilities (for reqwest's bytes_stream)
futures-util = "0.3"
